startet på kategori seksjonen og delt opp i sections for de andre
lagde også en mal som kan brukes til de andre sidene, siden de skal ha lik header og footer

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -31,7 +31,14 @@ body {
   main{
     grid-area: "main";
   }
-  
+
+  .category-card{
+    display: flex;
+    flex-direction: column;
+    padding: 10rem;
+    border: #000;
+  }
+
   footer{
     grid-area: "footer";
   }
