--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -32,15 +32,28 @@ body {
     grid-area: "main";
   }
 
-  .category-card{
+  /*kategorikort*/
+  #popkategorier{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    gap: 1rem;
+  }
+  .category-card{
+    max-width: 400px;
     padding: 10rem;
-    border: #000;
+    border: 2px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h3{
+        text-align: center;
+    }
   }
 
   footer{
     grid-area: "footer";
+    padding-top: 15px;
   }
 
   footer ul{
