--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -44,8 +44,8 @@ body {
     margin: 10px;
     a{
         padding: 1rem;
-        background-color: #1b1a1a;
-        color: #fff;
+        background-color: #fff;
+        color: #000;
         list-style: none;
         text-decoration: none;
         
