--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -85,6 +85,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     flex-grow: 1;
+    margin: 10px;
     gap: 1rem;
   }
   .category-card{
