gjort klar bilder til kategoriene men fikk ikke plasert de
nå er de komentert ut

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -97,9 +97,9 @@ body {
     align-items: center;
     h3{
         text-align: center;
+        color: #000;
     }
   }
-
     /*ANNMELDELSER*/
     .review{
       display: flex;
