--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -56,7 +56,6 @@ body {
     padding: 1rem;
   }
   
-  /*styrer også annmeldelser*/
   .column-container{
     display: flex;
     flex-wrap: wrap;
@@ -101,6 +100,13 @@ body {
     }
   }
     /*ANNMELDELSER*/
+    .annmeldelser{
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      gap: 1rem;
+      padding-top: 1rem;
+    }
     .review{
       display: flex;
       flex-direction: column;
@@ -168,7 +174,17 @@ body {
       justify-content: space-between;
       gap: 3rem;
     }
+    /*hovedel*/
+    .column-container{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    .products{
+      width: 350px;
+    }
 
+    /*footer*/
     footer{
       display: flex;
       flex-wrap: wrap;
