--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -94,6 +94,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
     h3{
         text-align: center;
         color: #000;
