--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -170,21 +170,59 @@ body {
     .product-container{
       display: flex;
       flex-direction: column;
-      width: 650px;
-      max-width: 800px;
+      width: 100%;
+      max-width: 100%;
       img{
         width: 100%;
+        max-width: 100%;
       }
     }
     aside{
       display: flex;
       flex-direction: column;
-      width: 650px;
-      max-width: 800px;
+      width: 100%;
+      max-width: 100%;
       img{
         width: 100%;
+        max-width: 100%;
       }
     }
+
+    /*Checkout.html*/
+    .handlevogn{
+      display: flex;
+      flex-direction: column;
+    }
+    .handlevogn article{
+      width: 100%;
+      max-width: 100%;
+      img{
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+
+    .column-layout{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      input{
+        padding: 1rem;
+      }
+      label{
+        display: flex;
+        flex-direction: column;
+      }
+      .godta{
+        display: flex;
+        flex-direction: row;
+      }
+      fieldset{
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  
 
   footer{
     grid-area: footer;
