--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -49,7 +49,7 @@ body {
     flex-wrap: wrap;
     justify-content: flex-end;
     background-color: #cecece;
-    max-width: 350px;
+    max-width: 100%;
     padding: 1rem;
     margin: 10px;
     a{
