det bare funka?

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -299,6 +299,7 @@ body {
     }
     /*POPULÆREKATEGORIER*/
     #popkategorier{
+      width: 80%;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: auto auto;
