--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -148,8 +148,10 @@ body {
     /*ANNMELDELSER*/
     .annmeldelser{
       display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
+      flex-wrap: nowrap;
+      flex-direction: row;
+      overflow: scroll;
+      width: 400px;
       gap: 1rem;
       padding-top: 1rem;
     }
@@ -159,6 +161,7 @@ body {
       justify-content: flex-end;
       flex-wrap: wrap;
       width: 300px;
+      min-width: 200px;
       padding: 5px;
       border: 0.5px solid #d2d2d2;
       border-radius: 5%;
@@ -355,7 +358,6 @@ body {
     }
     .review{
       max-width: 289px;
-      min-width: 200px;
     }
 
     /*PRODUCT.HTML*/
