--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -103,6 +103,7 @@ body {
     flex-grow: 1;
     margin: 10px;
     gap: 1rem;
+    max-width: 550px;
     h2, p{
     width: 100%;
     }
@@ -126,24 +127,30 @@ body {
   #cat1{
     background-image: url("../img/sneakers-category.jpg");
     background-size: cover;
+    background-repeat: round;
     width: 100%;
     height: 350px;
+    
   }
   #cat2{
     background-image: url("../img/løpesko-category.jpg");
     background-size: cover;
+    background-repeat: round;
   }
   #cat3{
     background-image: url("../img/pensko.jpg");
     background-size: cover;
+    background-repeat: round;
   }
   #cat4{
     background-image: url("../img/boots-category.jpg");
     background-size: cover;
+    background-repeat: round;
   }
   #cat5{
     background-image: url("../img/designer-category.jpg");
     background-size: cover;
+    background-repeat: round;
   }
     /*ANNMELDELSER*/
     .annmeldelser{
@@ -374,7 +381,7 @@ body {
     }
     #bigpic img{
     width: 100%;
-    max-width: 700px;
+    max-width: 487px;
    }
    .product-container{
     display: flex;
