--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -77,7 +77,7 @@ body {
   .products{
     flex-grow: 1;
     max-width: 350px;
-    min-width: 200px;
+    min-width: 250px;
     width: 100%; 
     box-shadow: 13px 9px 20px 0px #bfbebe; 
     border-radius: 4px; 
@@ -239,13 +239,14 @@ body {
       flex-direction: row;
       justify-content: space-between;
       flex-wrap: wrap;
-      
     }
     aside{
       display: flex;
-      flex-direction: column;
+      flex-wrap: nowrap;
+      flex-direction: row;
+      overflow: scroll;
       width: 100%;
-      max-width: 100%;
+      max-width: 800px;
       img{
         width: 100%;
         max-width: 100%;
@@ -427,6 +428,10 @@ body {
    }
    .product-container article img{
     width: 160px;
+   }
+   aside{
+    max-width: 1200px;
+    width: 100%;
    }
     
     /*footer*/
