la til margin på scroll i product.html

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -251,6 +251,7 @@ body {
       flex-wrap: nowrap;
       flex-direction: row;
       overflow: scroll;
+      margin: 1rem;
       width: 100%;
       max-width: 800px;
       img{
