linket til ikoner regular

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -106,6 +106,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto;
     flex-grow: 1;
     margin: 10px;
     gap: 1rem;
