fikset så populære kategorier er grid også på mobil

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -103,9 +103,10 @@ body {
     flex-direction: column;
   }
   #category-grid{
-    display: flex;
+    /*display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: column;*/
+    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto auto;
     flex-grow: 1;
@@ -132,33 +133,46 @@ body {
         border-radius: 3%;
     }
   }
+  #cat1, #cat2, #cat3, #cat4, #cat5{
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
   #cat1{
     background-image: url("../img/sneakers-category.jpg");
     background-size: cover;
     background-repeat: round;
     width: 100%;
     height: 350px;
-    
+    grid-row-start: 1;
+    grid-row-end: 2;
   }
   #cat2{
     background-image: url("../img/løpesko-category.jpg");
     background-size: cover;
     background-repeat: round;
+    grid-row-start: 2;
+    grid-row-end: 3;
   }
   #cat3{
     background-image: url("../img/pensko.jpg");
     background-size: cover;
     background-repeat: round;
+    grid-row-start: 3;
+    grid-row-end: 4;
   }
   #cat4{
     background-image: url("../img/boots-category.jpg");
     background-size: cover;
     background-repeat: round;
+    grid-row-start: 4;
+    grid-row-end: 5;
   }
   #cat5{
     background-image: url("../img/designer-category.jpg");
     background-size: cover;
     background-repeat: round;
+    grid-row-start: 5;
+    grid-row-end: 6;
   }
     /*ANNMELDELSER*/
     .annmeldelser{
