sentrerte popprodukter tekst og knapper

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -62,6 +62,10 @@ body {
     }
   }
   /*populære-produkter*/
+  #popprodukter{
+    justify-items: center;
+  }
+
   #popprodukter button{
     padding: 1rem;
   }
