--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -275,6 +275,7 @@ body {
     .handlevogn{
       display: flex;
       flex-direction: column;
+      gap: 1rem;
     }
     .handlevogn article{
       width: 100%;
@@ -457,7 +458,18 @@ body {
     max-width: 1200px;
     width: 100%;
    }
-    
+
+   /*Checkout.html*/
+   .handlevogn article{
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+  .handlevogn article section{
+    display: flex;
+    flex-direction: column;
+  }
     /*footer*/
     footer{
       flex-wrap: wrap;
