lagd border og fikset den tilnærmet bilde
mangler tekst under

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -506,6 +506,14 @@ body {
       flex-direction: column;
     }
   }
+  .column-layout fieldset label{
+    border: 1px solid #efefef;
+    flex-direction: row-reverse;
+    align-items: baseline;
+    justify-content: flex-end;
+    gap: 1rem;
+  }
+
   .bigbutton{
     width: 100%;
   }
