--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -133,41 +133,32 @@ body {
   #cat1, #cat2, #cat3, #cat4, #cat5{
     grid-column-start: 1;
     grid-column-end: 2;
+    background-size: cover;
+    background-repeat: round;
+    height: 350px;
   }
   #cat1{
     background-image: url("../img/sneakers-category.jpg");
-    background-size: cover;
-    background-repeat: round;
-    width: 100%;
-    height: 350px;
     grid-row-start: 1;
     grid-row-end: 2;
   }
   #cat2{
     background-image: url("../img/løpesko-category.jpg");
-    background-size: cover;
-    background-repeat: round;
     grid-row-start: 2;
     grid-row-end: 3;
   }
   #cat3{
     background-image: url("../img/pensko.jpg");
-    background-size: cover;
-    background-repeat: round;
     grid-row-start: 3;
     grid-row-end: 4;
   }
   #cat4{
     background-image: url("../img/boots-category.jpg");
-    background-size: cover;
-    background-repeat: round;
     grid-row-start: 4;
     grid-row-end: 5;
   }
   #cat5{
     background-image: url("../img/designer-category.jpg");
-    background-size: cover;
-    background-repeat: round;
     grid-row-start: 5;
     grid-row-end: 6;
   }
@@ -381,40 +372,37 @@ body {
       margin: 0;
       gap: 0;
     }
-    #cat1{
+    #cat1, #cat2, #cat3{
+      grid-row-start: 1;
+      grid-row-end: 2;
       max-width: 386px;
+    }
+    #cat4, #cat5{
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
+
+    #cat1{
       grid-column-start: 1;
       grid-column-end: 2;
-      grid-row-start: 1;
-      grid-row-end: 2;
     }
     #cat2{
-      max-width: 386px;
       grid-column-start: 2;
       grid-column-end: 3;
-      grid-row-start: 1;
-      grid-row-end: 2;
     }
     #cat3{
-      max-width: 386px;
       grid-column-start: 3;
       grid-column-end: 4;
-      grid-row-start: 1;
-      grid-row-end: 2;
     }
     #cat4{
       max-width: 864px;
       grid-column-start: 1;
       grid-column-end: 3;
-      grid-row-start: 2;
-      grid-row-end: 3;
     }
     #cat5{
       max-width: 300px;
       grid-column-start: 3;
       grid-column-end: 4;
-      grid-row-start: 2;
-      grid-row-end: 3;
     }
 
 
@@ -427,7 +415,7 @@ body {
      max-width: 1200px;
      overflow: scroll;
      flex-wrap: nowrap;
-      flex-direction: row;
+    flex-direction: row;
     }
     .review{
       max-width: 289px;
@@ -546,6 +534,27 @@ body {
   }
 
   @media only screen and (min-width:801px) and (max-width: 1000px){
+    #grid-container{
+      max-width: 1200px;
+      width: 100%;
+      margin: 0 auto;
+      grid-template-areas: "header" "header" "header"
+                            "main" "main" "main"
+                            "footer" "footer" "footer";
+    }
+   
+    nav{
+      display: flex;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+
+    nav ul{
+      flex-direction: row;
+      justify-content: space-around;
+      gap: 2.6rem;
+    }
+
     #category-grid{
       display: grid;
       justify-content: center;
@@ -554,39 +563,59 @@ body {
       margin: 0;
       gap: 0;
     }
-    #cat1{
+    #cat1, #cat2, #cat3{
       max-width: 386px;
+      grid-row-start: 2;
+      grid-row-end: 3;
+    }
+    #cat4, #cat5{
+      grid-row-start: 1;
+      grid-row-end: 2;
+    }
+
+    #cat1{
       grid-column-start: 1;
       grid-column-end: 2;
-      grid-row-start: 2;
-      grid-row-end: 3;
     }
     #cat2{
-      max-width: 386px;
       grid-column-start: 2;
       grid-column-end: 3;
-      grid-row-start: 2;
-      grid-row-end: 3;
     }
     #cat3{
-      max-width: 386px;
       grid-column-start: 3;
       grid-column-end: 4;
-      grid-row-start: 2;
-      grid-row-end: 3;
     }
     #cat4{
       max-width: 864px;
       grid-column-start: 1;
       grid-column-end: 3;
-      grid-row-start: 1;
-      grid-row-end: 2;
     }
     #cat5{
       max-width: 300px;
       grid-column-start: 3;
       grid-column-end: 4;
-      grid-row-start: 1;
-      grid-row-end: 2;
+    }
+
+     /*footer*/
+     footer{
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    #footer-logo{
+      min-width: 100%;
+      p{
+        width: 100%;
+      }
+    }
+    footer section ul{
+      padding: 0;
+    }
+    #snarveier nav ul{
+      flex-direction: column;
+      gap: 7.5px;
+    }
+    #some ul{
+      flex-direction: row;
+      gap: 20px;
     }
   }
