lagd en border mellom de forskjellige tingene i checkout.html

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -263,12 +263,12 @@ body {
     }
 
     /*Checkout.html*/
-    .handlevogn{
+    #handlevogn{
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
-    .handlevogn article{
+    #handlevogn article{
       width: 100%;
       max-width: 100%;
       img{
@@ -296,6 +296,11 @@ body {
         display: flex;
         flex-direction: column;
       }
+    }
+    #handlevogn, #personopplysninger, #levering, #betaling{
+      border-bottom: 2px solid #efefef;
+      padding-bottom: 1rem;
+      padding-top: 1rem;
     }
     #kontaktinfo{
       margin-top: 5rem;
@@ -459,7 +464,7 @@ body {
    }
 
    /*Checkout.html*/
-   .handlevogn article{
+   #handlevogn article{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -469,10 +474,10 @@ body {
     padding: 10px;
     border: 1px solid #d5d5d5;
   }
-  .handlevogn article img{
+  #handlevogn article img{
     max-width: 450px;
   }
-  .handlevogn article section{
+  #handlevogn article section{
     display: flex;
     flex-direction: column;
   }
