--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -287,6 +287,7 @@ body {
       label{
         display: flex;
         flex-direction: column;
+        width: 100%;
       }
       .godta{
         display: flex;
@@ -296,6 +297,12 @@ body {
         display: flex;
         flex-direction: column;
       }
+    }
+    #personopplysninger .column-layout{
+      align-items: center;
+    }
+    .bigbutton{
+      width: 100%;
     }
     #handlevogn, #personopplysninger, #levering, #betaling{
       border-bottom: 2px solid #efefef;
@@ -519,9 +526,6 @@ body {
     padding: 10px;
   }
 
-  .bigbutton{
-    width: 100%;
-  }
     /*footer*/
     footer{
       flex-wrap: wrap;
