la til ikoner i produktkortene i checkout.html

--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -494,6 +494,7 @@ body {
   #handlevogn article section{
     display: flex;
     flex-direction: column;
+    gap: 1rem;
   }
   .column-layout{
     display: flex;
