--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -139,27 +139,28 @@ body {
     height: 350px;
   }
   #cat1{
-    background-image: url("../img/sneakers-category.jpg");
+    background-image: url("../img/sneakers-category.jpg"); /*Image by <a href="https://pixabay.com/users/grailify-15961668/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5226091">grailify</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5226091">Pixabay</a>
+    */
     grid-row-start: 1;
     grid-row-end: 2;
   }
   #cat2{
-    background-image: url("../img/løpesko-category.jpg");
+    background-image: url("../img/løpesko-category.jpg"); /*Image by <a href="https://pixabay.com/users/marzuk-17536011/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5418991">Mohamed Marzuk Mohamed Ansari</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5418991">Pixabay</a>*/
     grid-row-start: 2;
     grid-row-end: 3;
   }
   #cat3{
-    background-image: url("../img/pensko.jpg");
+    background-image: url("../img/pensko.jpg"); /*Image by <a href="https://pixabay.com/users/tylermike525-19623825/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6078951">Mike Tyler</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6078951">Pixabay</a>*/
     grid-row-start: 3;
     grid-row-end: 4;
   }
   #cat4{
-    background-image: url("../img/boots-category.jpg");
+    background-image: url("../img/boots-category.jpg"); /*Image by <a href="https://pixabay.com/users/leoto-639733/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=588799">Vera Syhre</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=588799">Pixabay</a>*/
     grid-row-start: 4;
     grid-row-end: 5;
   }
   #cat5{
-    background-image: url("../img/designer-category.jpg");
+    background-image: url("../img/designer-category.jpg"); /*Image by <a href="https://pixabay.com/users/artofclubs-22076876/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6336173">artofclubs</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6336173">Pixabay</a>*/
     grid-row-start: 5;
     grid-row-end: 6;
   }
