--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -5,7 +5,9 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
   }
-
+ a:hover{
+  font-size: large;
+ }
   #grid-container{
     display: grid;
     grid-template-areas: "header"
@@ -326,7 +328,7 @@ body {
       text-align: center;
       gap: 1rem;
       span{
-        font-size: 20px;
+        font-size: 1.5em;
         font-weight: bold;
       }
     }
