--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -51,6 +51,7 @@ body {
     flex-wrap: wrap;
     justify-content: flex-end;
     background-color: #cecece;
+    width: 100%;
     max-width: 100%;
     padding: 1rem;
     margin: 10px;
