--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -306,7 +306,7 @@ body {
     .column-layout section{
       border: 1px solid #efefef;
       p{
-        color: #999797;
+        color: #3a3a3a;
       }
     }
 
