--- a/Eksamen-2024/css/style.css
+++ b/Eksamen-2024/css/style.css
@@ -5,6 +5,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
   }
+  h1{ font-size: 2rem;}
+  h2{font-size: 1.8rem;}
+  h3{font-size: 1.6rem;}
+  h4{font-size: 1.4rem;}
+  p{font-size: 1rem;}
+  
  a:hover{
   font-size: large;
  }
@@ -14,6 +20,7 @@ body {
                             "main"
                             "footer";
   }
+
   header{
     grid-area: header;
   }
